--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,32 @@
   <head>
     <title>Crimern</title>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=2"
+    />
     <meta name="keywords" content="#" />
     <meta name="description" content="#" />
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet-geosearch@2.6.0/assets/css/leaflet.css">
+    <link
+      rel="stylesheet"
+      href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&amp;subset=latin-ext"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet-geosearch@2.6.0/assets/css/leaflet.css"
+    />
   </head>
 
-  <body class='is-dark'>
+  <body class="is-dark">
     <noscript>
       Twoja przeglądarka ma wyłączoną obsługę skryptów JavaScript.
     </noscript>
